--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -227,15 +227,15 @@ const metadata = {
     title="Explore More SharePoint Wonders"
     items={[
       {
-        title: 'Knowledge Base & Self‑Service Portals',
+        title: 'Info On-Demand',
         description:
-          'Centralised, searchable hubs that give staff instant access to policies, guides and resources - reducing support requests and saving time.',
+          'Centralised Knowledge Base giving staff quick access to policies, guides and resources - reducing support requests and saving time.',
         icon: 'tabler:book',
       },
       {
-        title: 'Project & Task Management Hub ',
+        title: 'Mission Control',
         description:
-          'SharePoint‑powered workspace for planning, assigning and tracking projects, keeping teams aligned and deadlines on track.',
+          'SharePoint‑powered workspaces for planning, assigning and tracking projects - keeping teams aligned and deadlines on track.',
         icon: 'tabler:checkbox',
       },
       {
@@ -245,12 +245,25 @@ const metadata = {
         icon: 'tabler:list-check',
       },
       {
-        title: 'Workflow Automation & Approvals',
+        title: 'Process Power',
         description:
           'Streamline processes with digital forms and automated approvals, reducing manual effort and speeding up decision‑making.',
         icon: 'tabler:rocket',
       },
-    ]}
+
+          {
+        title: 'Next-Gen Migrations',
+        description:
+          'Smoothly transition from legacy systems or outdated environments into modern SharePoint online - with minimal disruption and maximum data integrity.',
+        icon: 'tabler:cloud-up',
+      },
+            {
+        title: 'Teams Reset',
+        description:
+          'Untangle the sprawl of unused channels, duplication and clutter. Ensuring Microsoft Teams stays a productive hub rather than a digital dumping ground.',
+        icon: 'tabler:recycle',
+      },
+          ]}
   />
 
   <!-- Note Widget ******************* -->
@@ -474,13 +487,13 @@ const metadata = {
       },
       {
         title: 'Anna',
-        tagline: 'Design & UX Specialist',
+        tagline: 'Design & UX Advisor',
         description:
-          'I’m a graphic designer with a background in design and animation, which means I know how to make things look good and feel right. I shape the visuals and graphics so the final look and feel lands with a sharp, professional edge.',
+          'I’m a graphic designer with a background in design and animation, which means I know how to make things look good and feel right. I provide guidance on design direction, ensuring each project’s final look and feel is polished and professional.',
         image: '/images/WEIRD-BEARD-IT-a2.jpg',
         socialLinks: [
           { ariaLabel: 'LinkedIn', icon: 'tabler:brand-linkedin', href: 'https://www.linkedin.com/in/annabannabee' },
-          { ariaLabel: 'LinkedIn', icon: 'tabler:brand-instagram', href: 'https://www.instagram.com/annabannadoodle' },
+          { ariaLabel: 'LinkedIn', icon: 'tabler:brand-instagram', href: 'https://www.instagram.com/designsbyannalouise' },
         ],
       },
     ]}
