--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -251,19 +251,19 @@ const metadata = {
         icon: 'tabler:rocket',
       },
 
-          {
+      {
         title: 'Next-Gen Migrations',
         description:
           'Smoothly transition from legacy systems or outdated environments into modern SharePoint online - with minimal disruption and maximum data integrity.',
         icon: 'tabler:cloud-up',
       },
-            {
+      {
         title: 'Teams Reset',
         description:
           'Untangle the sprawl of unused channels, duplication and clutter. Ensuring Microsoft Teams stays a productive hub rather than a digital dumping ground.',
         icon: 'tabler:recycle',
       },
-          ]}
+    ]}
   />
 
   <!-- Note Widget ******************* -->
@@ -493,7 +493,11 @@ const metadata = {
         image: '/images/WEIRD-BEARD-IT-a2.jpg',
         socialLinks: [
           { ariaLabel: 'LinkedIn', icon: 'tabler:brand-linkedin', href: 'https://www.linkedin.com/in/annabannabee' },
-          { ariaLabel: 'LinkedIn', icon: 'tabler:brand-instagram', href: 'https://www.instagram.com/designsbyannalouise' },
+          {
+            ariaLabel: 'LinkedIn',
+            icon: 'tabler:brand-instagram',
+            href: 'https://www.instagram.com/designsbyannalouise',
+          },
         ],
       },
     ]}
