--- a/src/components/common/CommonMeta.astro
+++ b/src/components/common/CommonMeta.astro
@@ -1,8 +1,8 @@
 ---
-import { getAsset } from '~/utils/permalinks';
+// EDIT-REMOVE: import { getAsset } from '~/utils/permalinks';
 ---
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link rel="sitemap" href={getAsset('/sitemap-index.xml')} />
+<!--  EDIT: N/A <link rel="sitemap" href={getAsset('/sitemap-index.xml')} /> -->
